syntax = "proto3";

package api.v1;

import "google/protobuf/timestamp.proto";

service Plans {
  rpc UploadPlan(UploadPlanRequest) returns (UploadPlanResponse) {}
}

message UploadPlanRequest {
  string run_id = 1;
  string content = 2;
}

message UploadPlanResponse {
  bool success = 1;
}
